# decoupling

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  tests.yml
data/: dataset_config.json
data/bc/: bc_metadata.csv
data/bc/processed/: bc_distribution_inh_neurons.csv  bc_molecular_composition.csv  bc_morph_features.csv
data/bc/raw/: README.md
data/human_mtg/: mtg_patchseq_metadata.csv
data/human_mtg/processed/: mtg_patchseq_features.csv
data/human_mtg/raw/: README.md
data/mouse_m1/: m1_patchseq_metadata.csv
data/mouse_m1/processed/: m1_patchseq_features.csv
data/mouse_m1/raw/: README.md
data/mouse_v1/: v1_em_metadata.csv
data/mouse_v1/processed/: v1_em_features.csv
data/mouse_v1/raw/: README.md
data/v1/: v1_metadata.csv
decoupling/: __init__.py
decoupling/metrics/: __init__.py  clusters.py  features.py
decoupling/models/: __init__.py  base.py  consensus.py  depth_independent.py  ephys_morph_clustering.py  hierarchical.py
decoupling/utils/: __init__.py  postprocessing.py  preprocessing.py  visualization.py
notebooks/: analysis1_morphoelectric_diversity.ipynb  analysis2_depth-dependent_gradients.ipynb  analysis3_link_to_molecular_identity.ipynb  analysis4_preservation_across_areas_and_species.ipynb
tests/: test_allen_clustering.py  test_clustering.py  test_clusters.py  test_compatibility.py  test_consensus.py  test_consensus_clustering.py  test_depth_independent.py  test_depth_independent_clustering.py  test_environment.py  test_features.py  test_processing.py  test_profiles.py  test_schema.py  test_visualization.py
(+5 files in other folders)
